Travis-git: use clone depth 1 and quiet cloning
No need to use the current default depth of 50.
Quiet cloning makes the logs more readable.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ compiler: g++
 sudo: required
 services: docker
 
+git:
+  quiet: true
+  depth: 1
 
 before_script:
   - python scripts/outputstreams_set_blocking.py
