Use docker image with preinstalled dependencies
Instead of installing dependencies on each build,
use a docker image with the dependencies preinstalled.
Makes it more convenient to build and test locally.

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,10 @@ before_script:
   - 'if [ -e travis.cancel ]; then
         exit 0;
     fi'
-  - sudo docker run -it -v $(pwd):/sources -e "GIT_BRANCH=master" centos:7 bash /sources/mkappimage.sh
+  - travis_wait 20 # 20 minutes should be plenty to pull the docker image
+    sudo docker pull mypaint/appimage-base:1.0.0
+  - sudo docker run -t -v $(pwd):/sources -e "GIT_BRANCH=master"
+    mypaint/appimage-base:1.0.0 bash /sources/mkappimage.sh
 
 after_success:
     - cd $TRAVIS_BUILD_DIR
