Update docker image
Runs a minifier on the py modules that are used/bundled.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,3 +8,11 @@ RUN yum install -y git wget file \
       pygobject3-devel librsvg2-devel \
       libpng-devel lcms2-devel json-c-devel \
       gtk3 gobject-introspection
+RUN yum install -y python2-pip
+RUN pip install python-minifier
+RUN bash -c '
+for f in $(find / -name "*.py")
+do
+pyminify --remove-literal-statements --preserve-globals true "$f" > /tmp/tmpf.py && mv -f /tmp/tmpf.py "$f"
+done
+'
