--- a/.travis.yml
+++ b/.travis.yml
@@ -25,11 +25,11 @@ before_script:
   - git clone https://github.com/mypaint/mypaint-brushes.git
   - # 20 minutes should be plenty to pull the docker image
   - travis_wait 20
-    sudo docker pull mypaint/appimage-base:1.2.0
+    sudo docker pull mypaint/appimage-base:1.3.1
 
 script:
-  - sudo docker run -t -v $(pwd):/sources mypaint/appimage-base:1.2.0
-    bash /sources/scripts/mkappimage.sh
+  - sudo docker run -t -v $(pwd):/sources mypaint/appimage-base:1.3.1
+    scl enable devtoolset-7 "bash -c /sources/scripts/mkappimage.sh"
 
 after_success:
     - cd $TRAVIS_BUILD_DIR
